Generated alpha images are getting depremultiplied during sampling #34923

Closed
opened 2013-04-08 21:46:25 +02:00 by Antonis Ryakiotakis · 2 comments

%%%--- Operating System, Graphics card ---
All

- Blender version with error, and version that worked ---

55905

- Short description of error ---

Images with generated alpha channel are getting depremultiplied during sampling. This means that for instance, an image with 0.5, 0.5, 0.5 components will get an alpha of 0.5 and will get its colours blown to 1.0 after de-premultiplication.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

Press render on attached file. The material of the plane is set to shadeless so you should get the same result as the one in the image editor. You get much brighter colours instead. Now apply attached patch and retry. Result should be more or less the same as in image editor.%%%

%%%--- Operating System, Graphics card --- All - Blender version with error, and version that worked --- 55905 - Short description of error --- Images with generated alpha channel are getting depremultiplied during sampling. This means that for instance, an image with 0.5, 0.5, 0.5 components will get an alpha of 0.5 and will get its colours blown to 1.0 after de-premultiplication. - Steps for others to reproduce the error (preferably based on attached .blend file) --- Press render on attached file. The material of the plane is set to shadeless so you should get the same result as the one in the image editor. You get much brighter colours instead. Now apply attached patch and retry. Result should be more or less the same as in image editor.%%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
1 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#34923
No description provided.