Fix #34923 Images that have their alpha calculated should not get de-premultiplied.