source/blender/render/intern/source/imagetexture.c
@@ -307,8 +307,9 @@ int imagewrap(Tex *tex, Image *ima, ImBuf *ibuf, const float texvec[3], TexResul
 		texres->ta = 1.0f - texres->ta;
 	}
 
-	/* de-premul, this is being premulled in shade_input_do_shade() */
-	if (texres->ta!=1.0f && texres->ta>1e-4f) {
+	/* de-premul, this is being premulled in shade_input_do_shade()
+	 * do not de-premul for generated alpha, it is already in straight */
+	if (texres->ta!=1.0f && texres->ta>1e-4f && !(tex->imaflag & TEX_CALCALPHA)) {
 		fx= 1.0f/texres->ta;
 		texres->tr*= fx;
 		texres->tg*= fx;
@@ -1465,7 +1466,8 @@ static int imagewraposa_aniso(Tex *tex, Image *ima, ImBuf *ibuf, const float tex
 
 	/* brecht: tried to fix this, see "TXF alpha" comments */
 
-	if (texres->ta != 1.f && (texres->ta > 1e-4f)) {
+	/* do not de-premul for generated alpha, it is already in straight */
+	if (texres->ta!=1.0f && texres->ta>1e-4f && !(tex->imaflag & TEX_CALCALPHA)) {
 		fx = 1.f/texres->ta;
 		texres->tr *= fx;
 		texres->tg *= fx;
@@ -1872,7 +1874,8 @@ int imagewraposa(Tex *tex, Image *ima, ImBuf *ibuf, const float texvec[3], const
 	}
 
 	/* de-premul, this is being premulled in shade_input_do_shade() */
-	if (texres->ta != 1.0f && texres->ta > 1e-4f) {
+	/* do not de-premul for generated alpha, it is already in straight */
+	if (texres->ta!=1.0f && texres->ta>1e-4f && !(tex->imaflag & TEX_CALCALPHA)) {
 		mul_v3_fl(&texres->tr, 1.0f / texres->ta);
 	}
 
